update api endpoints

--- a/evira/index.html
+++ b/evira/index.html
@@ -8,11 +8,67 @@
     </head>
     <body>
         <p>Welcome to Evira api docs!</p>
+        <p>Auth endpoints</p>
         <ul>
-            <li><a href="login.json">login.json</a></li>
-            <li><a href="registration.json">registration.json</a></li>
-            <li><a href="categories.json">categories.json</a></li>
-            <li><a href="products.json">products.json</a></li>
+            <li><a href="auth/login.json">auth/login.json</a></li>
+            <li><a href="auth/registration.json">auth/registration.json</a></li>
+            <li><a href="auth/verify.json">auth/verify.json</a></li>
+            <li><a href="auth/forgot-password.json">auth/forgot-password.json</a></li>
+            <li><a href="auth/reset-password.json">auth/reset-password.json</a></li>
+            <li><a href="auth/otp.json">auth/otp.json</a></li>
+        </ul>
+        <p>Profile endpoints</p>
+        <ul>
+            <li><a href="profile/profile.json">profile/profile.json</a></li>
+            <li><a href="profile/update.json">profile/update.json</a></li>
+        </ul>
+        <p>Shipping address endpoints</p>
+        <ul>
+            <li><a href="shipping-address/index.json">shipping-address/index.json</a></li>
+            <li><a href="shipping-address/store.json">shipping-address/store.json</a></li>
+            <li><a href="shipping-address/update.json">shipping-address/update.json</a></li>
+            <li><a href="shipping-address/delete.json">shipping-address/delete.json</a></li>
+        </ul>
+        <p>Notification endpoints</p>
+        <ul>
+            <li><a href="notifications.json">notifications.json</a></li>
+        </ul>
+        <p>Promo endpoints</p>
+        <ul>
+            <li><a href="promo/index.json">promo/index.json</a></li>
+            <li><a href="promo/apply.json">promo/apply.json</a></li>
+        </ul>
+        <p>Product endpoints</p>
+        <ul>
+            <li><a href="product/index.json">product/index.json</a></li>
+            <li><a href="product/show.json">product/show.json</a></li>
+        </ul>
+        <p>Cart endpoints</p>
+        <ul>
+            <li><a href="cart/index.json">cart/index.json</a></li>
+            <li><a href="cart/store.json">cart/store.json</a></li>
+            <li><a href="cart/delete.json">cart/delete.json</a></li>
+        </ul>
+        <p>Checkout endpoints</p>
+        <ul>
+            <li><a href="checkout/store.json">checkout/store.json</a></li>
+        </ul>
+        <p>Wishlist endpoints</p>
+        <ul>
+            <li><a href="wishlist/index.json">wishlist/index.json</a></li>
+            <li><a href="wishlist/store.json">wishlist/store.json</a></li>
+        </ul>
+        <p>Order endpoints</p>
+        <ul>
+            <li><a href="order/orders-ongoing.json">order/orders-ongoing.json</a></li>
+            <li><a href="order/order-tracking.json">order/order-tracking.json</a></li>
+            <li><a href="order/order-histories.json">order/order-histories.json</a></li>
+            <li><a href="order/invoice.json">order/invoice.json</a></li>
+        </ul>
+        <p>Public endpoints</p>
+        <ul>
+            <li><a href="faq.json">faq.json</a></li>
+            <li><a href="privacy-policy.json">faq/privacy-policy.json</a></li>
         </ul>
     </body>
 </html>
